--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Blogging platform</title>
-    <link rel="stylesheet" th:href="@{/css/home.css}"/>
-</head>
-<body>
-        <header>
-            <nav>
-                <div class="logo"><img  hight="100" width="150"></div>
-                <div class="Menu">
-                    <a href="#" style="text-decoration: none;color:white;padding-right: 20px;">login</a>
-                </div>
-            </nav>
-            <main>
-                <section>
-                    <h2>Blogging Platform</h2>
-                    <h1 class="text-muted">Be billing to share your knowledge..<br>The more you share the more it increase.<br><h3>Keep Sharing!</h3></h1>
-                    </br>
-                    </br>
-                    <a href="#"class="btn">Create Blog</a>
-
-                    <a href="#"class="btn">QnA</a>
-                   
-                </section>
-            </main>
-        </header>
-        <div class="box-black" style="text-align: center; padding:10px;">
-            &copy; Copyright www.bloggingplatform   |   HOME   |   TERMS   |   PRIVACY   |   ABOUT US    | CONTACT
+    <link rel="stylesheet" th:href="@{/css/home.css}" />
+  </head>
+  <body class="body">
+    <header>
+      <nav>
+        <div class="logo"></div>
+        <div class="Menu">
+          <a
+            href="/login"
+            style="text-decoration: none; color: white; padding-right: 20px"
+            >login</a
+          >
         </div>
-</body>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2 style="padding-bottom: 15px">Blogging Platform</h2>
+        <h1 class="text-muted">
+          Be billing to share your knowledge..<br />The more you share the more
+          it increase.<br />
+          <h3>Keep Sharing!</h3>
+        </h1>
+
+        <div style="padding-top: 20px">
+          <a href="/register" class="btn">Create Blog</a>
+
+          <a href="#" class="btn">QnA</a>
+        </div>
+      </section>
+    </main>
+
+    <div class="box-black" style="text-align: center; padding: 10px">
+      &copy; Copyright www.bloggingplatform | HOME | TERMS | PRIVACY | ABOUT US
+      | CONTACT
+    </div>
+  </body>
 </html>
