Spring security | feed page added | custom config

--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -126,3 +126,57 @@ footer {
   height: 60px;
   width: 100%;
 }
+.sidenav {
+  height: 100%;
+  width: 215px;
+  position: fixed;
+  z-index: 1;
+  border-right: 1px solid black;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  overflow-x: hidden;
+  padding-top: 176px;
+}
+.btn {
+  background-color: #343a30;
+  border-radius: 30px;
+  margin-bottom: 15px;
+}
+/* The navigation menu links */
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Style page content */
+.main {
+  margin-left: 160px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+.box-black {
+  background-color: black;
+  height: 7vh;
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+  font-size: 20px;
+
+  color: white;
+}
