--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -29,28 +29,14 @@
       <nav>
         <a href="/home">
           <div class="logo">
-            <img src="images/logo.png" height="100" width="150" /></div
+            <img src="../images/logo.png" height="100" width="150" /></div
         ></a>
       </nav>
     </header>
     <div th:replace="${content}"></div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
+    <div class="box-black" style="text-align: center; padding: 10px">
+      &copy; Copyright www.bloggingplatform | HOME | TERMS | PRIVACY | ABOUT US
+      | CONTACT
+    </div>
   </body>
 </html>
