--- a/src/main/resources/templates/normal/userblogs.html
+++ b/src/main/resources/templates/normal/userblogs.html
@@ -13,62 +13,76 @@
   <body>
     <section>
       <div class="sidenav">
-        <div
-          style="
-            background-color: aliceblue;
-            border: 2px solid black;
-            width: 173px;
-            height: 96px;
-            margin-bottom: 34px;
-            margin-left: 9px;
-          "
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn btn-dark"
+          data-toggle="modal"
+          data-target="#modelId"
         >
-          <ul>
-            <li style="display: flex">
-              <div
-                style="
-                  margin-left: 2px;
-                  height: 70px;
-                  width: 70px;
-                  border-radius: 50%;
-                  background-color: darkgoldenrod;
-                "
-              ></div>
+          WRITE BLOG
+        </button>
 
-              <button
-                style="
-                  background-color: aliceblue;
-                  width: 79px;
-                  border: 1px solid black;
-                  margin: 18px 0px 0px 10px;
-                  border-radius: 0;
-                "
-                type="button"
-                class="btn"
-              >
-                EDIT
-              </button>
-            </li>
-            <li><span th:text="${user.firstName}"></span></li>
-          </ul>
-        </div>
-
-        <a href="/userblogs"
-          ><button type="button" class="btn btn-dark">WRITE BLOG</button>
-        </a>
         <a href="#"
           ><button type="button" class="btn btn-dark">HOME</button>
         </a>
         <a href="#"
           ><button type="button" class="btn btn-dark">LIKES</button>
         </a>
-        <a href="#"
+        <a th:href="@{/user/profile}"
           ><button type="button" class="btn btn-dark">PROFILE</button>
         </a>
         <a href="/logout"
           ><button type="button" class="btn btn-dark">LOGOUT</button>
         </a>
       </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="modelId"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="modelTitleId"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">WRITE BLOG</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="container-fluid"></div>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">Save</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        $("#exampleModal").on("show.bs.modal", (event) => {
+          var button = $(event.relatedTarget);
+          var modal = $(this);
+          // Use above variables to manipulate the DOM
+        });
+      </script>
       <div class="feed">
         <div></div>
         <div></div>
