--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -27,7 +27,7 @@
   <body class="body">
     <header>
       <nav>
-        <a href="/home">
+        <a th:href="@{/home}">
           <div class="logo">
             <img src="../images/logo.png" height="100" width="150" /></div
         ></a>
