--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,9 +35,16 @@
       </section>
     </main>
 
-    <div class="box-black" style="text-align: center; padding: 10px">
-      &copy; Copyright www.bloggingplatform | HOME | TERMS | PRIVACY | ABOUT US
-      | CONTACT
+    <div
+      class="box-black"
+      style="
+        text-align: center;
+        padding: 10px;
+        word-spacing: 28px;
+        letter-spacing: 3.9px;
+      "
+    >
+      | HOME | TERMS | PRIVACY | ABOUT US | CONTACT
     </div>
   </body>
 </html>
