--- a/src/main/resources/templates/normal/userblogs.html
+++ b/src/main/resources/templates/normal/userblogs.html
@@ -19,11 +19,12 @@
           class="btn btn-dark"
           data-toggle="modal"
           data-target="#modelId"
+          style="margin-left: 16px"
         >
           WRITE BLOG
         </button>
 
-        <a href="#"
+        <a th:href="@{/user/feed}"
           ><button type="button" class="btn btn-dark">HOME</button>
         </a>
         <a href="#"
@@ -36,53 +37,8 @@
           ><button type="button" class="btn btn-dark">LOGOUT</button>
         </a>
       </div>
+      <div th:replace="normal/fragments/modalfragment :: modal"></div>
 
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="modelId"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="modelTitleId"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">WRITE BLOG</h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="container-fluid"></div>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">Save</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <script>
-        $("#exampleModal").on("show.bs.modal", (event) => {
-          var button = $(event.relatedTarget);
-          var modal = $(this);
-          // Use above variables to manipulate the DOM
-        });
-      </script>
       <div class="feed">
         <div></div>
         <div></div>
