question queries | blog queries|thymeleaf builders

--- a/src/main/resources/templates/normal/fragments/questionfragment.html
+++ b/src/main/resources/templates/normal/fragments/questionfragment.html
@@ -48,7 +48,7 @@
                       placeholder="Topic"
                       aria-describedby="helpId"
                     />
-                    <small id="helpId" class="text-muted"
+                    <small style="color: white !important"
                       >What your Question is About</small
                     >
                   </div>
