--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -70,7 +70,7 @@ input {
   font-size: 17px;
   color: black !important;
   padding: 5px 5px;
-  background-color: transparent !important ;
+
   border: 1px solid black !important;
   transition: 0.5s !important;
 }
@@ -179,4 +179,17 @@ sidenav a:hover {
   font-size: 18px;
 
   color: white;
+}
+
+badge-secondary {
+  background-color: #343a30;
+}
+.nicEdit-main {
+  color: black !important;
+  background-color: white;
+  margin: 0px !important;
+  width: 698px !important;
+}
+.text-muted {
+  color: white !important;
 }
