--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -31,6 +31,7 @@
           <div class="logo">
             <img src="../images/logo.png" height="100" width="150" /></div
         ></a>
+        <div></div>
       </nav>
     </header>
     <div th:replace="${content}"></div>
