--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,7 +30,7 @@
         <div style="padding-top: 20px">
           <a href="/register" class="btn">Create Blog</a>
 
-          <a href="#" class="btn">QnA</a>
+          <a href="/qna" class="btn">QnA</a>
         </div>
       </section>
     </main>
@@ -44,7 +44,7 @@
         letter-spacing: 3.9px;
       "
     >
-      | HOME | TERMS | PRIVACY | ABOUT US | CONTACT
+      HOME | TERMS | PRIVACY | ABOUT US | CONTACT
     </div>
   </body>
 </html>
