--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -19,7 +19,12 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" th:href="@{/css/project.css}" />
 
     <title th:text="${title}">Base html</title>
@@ -29,9 +34,42 @@
       <nav>
         <a th:href="@{/home}">
           <div class="logo">
-            <img src="../images/logo.png" height="100" width="150" /></div
+            <img th:src="@{/images/logo.png}" height="100" width="150" /></div
         ></a>
-        <div></div>
+        <div
+          style="
+            background-color: #343a40;
+            color: white;
+            margin-left: 138px;
+
+            border-radius: 50px;
+            margin-top: 20px;
+            font-size: 40px;
+            padding: 12px 25px 12px 25px;
+          "
+          th:text="${navTitle}"
+        ></div>
+        <div
+          class="searchbar"
+          th:style="${hide} ? 'display:none' : 'display block' "
+        >
+          <input
+            style="
+              color: white;
+              border: none !important;
+              background-color: #343a40 !important;
+              box-shadow: none !important;
+              border-radius: 50%;
+            "
+            class="search_input"
+            type="text"
+            name=""
+            placeholder="Search topic"
+          />
+          <a href="#" class="search_icon"
+            ><i class="fas fa-search" style="color: black"></i
+          ></a>
+        </div>
       </nav>
     </header>
     <div th:replace="${content}"></div>
