--- a/src/main/resources/templates/normal/feed.html
+++ b/src/main/resources/templates/normal/feed.html
@@ -83,6 +83,38 @@
             <!-- <div><span th:text="${blog.title}"> Title </span></div>
             <div><span th:text="${blog.author}"> Author </span></div> -->
           </th:block>
+          <!--  pagination part -->
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li th:if="${currentPage != 0}" class="page-item">
+                <a
+                  th:href="@{'/user/feed/'+${currentPage-1}}"
+                  class="page-link"
+                  href="#"
+                  >Previous</a
+                >
+              </li>
+
+              <li
+                th:classappend="${currentPage==i-1?'active':''}"
+                th:each="i : ${#numbers.sequence(1,totalPages)}"
+                class="page-item"
+              >
+                <a th:href="@{'/user/feed/'+${i-1}}" class="page-link" href="#"
+                  ><span th:text="${i}"></span
+                ></a>
+              </li>
+
+              <li th:if="${currentPage+1 != totalPages}" class="page-item">
+                <a
+                  th:href="@{'/user/feed/'+${currentPage+1}}"
+                  class="page-link"
+                  href="#"
+                  >Next</a
+                >
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
     </section>
