updates | AnswerRepository | buttons

--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -258,3 +258,9 @@ badge-secondary {
   border-top-right-radius: 14px;
   border-bottom-right-radius: 14px;
 }
+.arrowicon:target {
+  color: #343a30;
+}
+.answers:focus {
+  color: #343a30;
+}
