--- a/src/main/resources/templates/normal/addblog.html
+++ b/src/main/resources/templates/normal/addblog.html
@@ -13,7 +13,7 @@
   <body>
     <section>
       <div class="sidenav">
-        <a th:href="@{'/user/feed'}"
+        <a th:href="@{'/user/feed/0'}"
           ><button type="button" class="btn btn-dark">BACK</button>
         </a>
         
