--- a/src/main/resources/templates/normal/profile.html
+++ b/src/main/resources/templates/normal/profile.html
@@ -13,14 +13,7 @@
   <body>
     <section style="display: flex">
       <div style="margin-left: 150px">
-        <div
-          style="
-            width: 150px;
-            border: 1px solid black;
-            border-radius: 50%;
-            height: 150px;
-          "
-        ></div>
+        <i class="fas fa-user-circle" style="font-size: 130px"></i>
         <div
           style="
             width: fit-content;
