--- a/src/main/resources/templates/qna.html
+++ b/src/main/resources/templates/qna.html
@@ -13,7 +13,7 @@
   <body>
     <section>
       <div class="sidenav">
-        <a th:href="@{/user/userquestions}"
+        <a th:href="@{/user/userquestions/0}"
           ><button
             style="height: fit-content"
             type="button"
@@ -32,7 +32,7 @@
           ADD QUESTION
         </button>
 
-        <a th:href="@{/user/feed}"
+        <a th:href="@{/user/feed/0}"
           ><button type="button" class="btn btn-dark">HOME</button>
         </a>
         <a href="/logout"
