--- a/src/main/resources/templates/normal/qna.html
+++ b/src/main/resources/templates/normal/qna.html
@@ -13,7 +13,7 @@
   <body>
     <section>
       <div class="sidenav">
-        <a th:href="@{/user/userquestions}"
+        <a th:href="@{/user/userquestions/0}"
           ><button
             style="height: fit-content"
             type="button"
@@ -32,7 +32,7 @@
           ADD QUESTION
         </button>
 
-        <a th:href="@{/user/feed}"
+        <a th:href="@{/user/feed/0}"
           ><button type="button" class="btn btn-dark">HOME</button>
         </a>
         <a href="/logout"
@@ -92,6 +92,9 @@
                 th:text="${question.question}"
               ></div>
               <p>
+                <span
+                  ><i class="fas fa-user-circle" style="font-size: 25px"></i
+                ></span>
                 <strong>Asker: </strong><a th:text="${question.asker}"></a>
                 <div style="font-size: 18px">
                   <span>
@@ -106,21 +109,82 @@
                       class="badge badge-secondary"
                     ></span>
                   </span>
+                  <div
+                    style="
+                      font-size: 17px;
+                      font-weight: 800;
+                      padding: 12px 0px 0px 9px;
+                    "
+                  >
+                    <a
+                      class="answers"
+                      th:href="@{${question.questionId}}"
+                      style="color: #334e33"
+                    >
+                      <span
+                        style="margin-right: 2px"
+                        th:if="${question.getAnswers().isEmpty()}"
+                        >Not yet answered</span
+                      ><span
+                        style="margin-right: 2px"
+                        th:if="${!question.getAnswers().isEmpty()}"
+                        th:text="${question.getAnswers().size()}"
+                        >Answer</span
+                      >
+                    </a>
+                  </div>
+                  <a th:href="@{user/qna/answers}">
+                    <div style="padding: 11px 0px 0px 5px">
+                      <button style="padding: 5px; border-radius: 35px">
+                        <i class="fas fa-pen-fancy"></i> Answer
+                      </button>
+                    </div></a
+                  >
                 </div>
               </p>
               <!-- th:utext for html parsing -->
-              <div th:each="answer : ${question.answers}">
+              <div th:each="answer : ${question.getAnswers()}">
                 <div th:text="${answer.author}"></div>
                 <div>
                   <span class="badge badge-secondary"
                     >Created : <span th:text="${answer.date}"></span
                   ></span>
                 </div>
-                <h6 th:remove="tag" th:utext="${answer.content}"></h6>
+                <div>
+                  <h6 th:remove="tag" th:utext="${answer.content}"></h6>
+                </div>
+                <div>
+                  <button
+                    style="
+                      width: 54px;
+                      border: 1px solid black;
+                      background-color: transparent;
+                      padding: 2px;
+                      border-radius: 15px;
+                      height: fit-content;
+                    "
+                    class="btn btn-light likebutton"
+                  >
+                    <svg width="24px" height="24px" viewBox="0 0 24 24">
+                      <g
+                        id="upvote"
+                        class="icon_svg-stroke icon_svg-fill arrowicon"
+                        stroke-width="1.5"
+                        stroke="#666"
+                        fill="none"
+                        fill-rule="evenodd"
+                        stroke-linejoin="round"
+                      >
+                        <polygon
+                          points="12 4 3 15 9 15 9 20 15 20 15 15 21 15"
+                        ></polygon>
+                      </g>
+                    </svg>
+                    <span th:text="${question.upvote}"></span>
+                  </button>
+                </div>
               </div>
             </div>
-            <!-- <div><span th:text="${blog.title}"> Title </span></div>
-          <div><span th:text="${blog.author}"> Author </span></div> -->
           </th:block>
         </div>
       </div>
